[package]
name = "wasm-fingerprint"
version = "0.0.1"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.50"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.27"
crc = "1.8.1"

[dependencies.web-sys]
version = "0.3.27"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "Performance",
]


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "z"